# BLE-faces

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
BLE-faces-flash-media/: .gitignore  CMakeLists.txt  partitions.csv
BLE-faces-flash-media/main/: CMakeLists.txt  app_main.c  ble_gatts_utils.c  ble_hid.c  ble_image_transfer.c  ble_server.c  face_detection.cpp  gesture.c  idf_component.yml  leds.c  media.c  power.c  wifi_control.c
BLE-faces-flash-media/main/include/: leds.h  media.h  wifi_control.h
__MACOSX/: ._BLE-faces-flash-media
__MACOSX/BLE-faces-flash-media/main/include/: ._ble_server.h
client/: ble_client.py
main/: CMakeLists.txt  app_main.c  ble_gatts_utils.c  ble_hid.c  ble_image_transfer.c  ble_server.c  button.c  camera_config.c  ei_infer.cpp  face_detection.cpp  gesture.c  gesture_ei.c  hand_gesture_ml.cpp  http_server.c  idf_component.yml  leds.c  media.c  power.c  system_state.c  wifi_control.c
main/include/: ble_gatts_utils.h  ble_hid.h  ble_image_transfer.h  ble_server.h  button.h  camera_config.h  ei_infer.h  ei_wrapper.h  face_detection.h  gesture.h  hand_gesture_ml.h  leds.h  media.h  power.h  system_state.h
