idf_component_register(
    SRCS
        "app_main.c"
        "camera_config.c"
        "face_detection.cpp"
        "ble_server.c"
        "ble_image_transfer.c"
        "gesture.c"
        "ble_hid.c"
        "ble_gatts_utils.c"
        "media.c"
        "http_server.c"
        "leds.c"
        "power.c"
        "button.c"
        "wifi_control.c"
    INCLUDE_DIRS
        "." "include"
    REQUIRES
        bt
        nvs_flash
        esp_timer
        esp32-camera
        human_face_detect
        esp-dl
        spiffs
        esp_http_server
        espressif__esp_jpeg
)
target_compile_features(${COMPONENT_LIB} PRIVATE cxx_std_17)